@@ -346,24 +346,68 @@ name|this
 operator|.
 name|identifier
 operator|=
+operator|(
+name|identifier
+operator|==
+literal|null
+operator|)
+condition|?
+operator|new
+name|byte
+index|[
+literal|0
+index|]
+else|:
 name|identifier
 expr_stmt|;
 name|this
 operator|.
 name|password
 operator|=
+operator|(
+name|password
+operator|==
+literal|null
+operator|)
+condition|?
+operator|new
+name|byte
+index|[
+literal|0
+index|]
+else|:
 name|password
 expr_stmt|;
 name|this
 operator|.
 name|kind
 operator|=
+operator|(
+name|kind
+operator|==
+literal|null
+operator|)
+condition|?
+operator|new
+name|Text
+argument_list|()
+else|:
 name|kind
 expr_stmt|;
 name|this
 operator|.
 name|service
 operator|=
+operator|(
+name|service
+operator|==
+literal|null
+operator|)
+condition|?
+operator|new
+name|Text
+argument_list|()
+else|:
 name|service
 expr_stmt|;
 block|}
