@@ -330,6 +330,22 @@ name|security
 operator|.
 name|token
 operator|.
+name|TokenIdentifier
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|token
+operator|.
 name|delegation
 operator|.
 name|AbstractDelegationTokenSecretManager
@@ -3149,6 +3165,120 @@ name|equals
 argument_list|(
 name|key3
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testEmptyToken ()
+specifier|public
+name|void
+name|testEmptyToken
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Token
+argument_list|<
+name|?
+argument_list|>
+name|token1
+init|=
+operator|new
+name|Token
+argument_list|<
+name|TokenIdentifier
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|Token
+argument_list|<
+name|?
+argument_list|>
+name|token2
+init|=
+operator|new
+name|Token
+argument_list|<
+name|TokenIdentifier
+argument_list|>
+argument_list|(
+operator|new
+name|byte
+index|[
+literal|0
+index|]
+argument_list|,
+operator|new
+name|byte
+index|[
+literal|0
+index|]
+argument_list|,
+operator|new
+name|Text
+argument_list|()
+argument_list|,
+operator|new
+name|Text
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|token1
+argument_list|,
+name|token2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|token1
+operator|.
+name|encodeToUrlString
+argument_list|()
+argument_list|,
+name|token2
+operator|.
+name|encodeToUrlString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|token2
+operator|=
+operator|new
+name|Token
+argument_list|<
+name|TokenIdentifier
+argument_list|>
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|token1
+argument_list|,
+name|token2
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|token1
+operator|.
+name|encodeToUrlString
+argument_list|()
+argument_list|,
+name|token2
+operator|.
+name|encodeToUrlString
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
